Fix the searchbar disappearing on mobile

--- a/app/javascript/src/styles/views/search_trends/_search_trends.scss
+++ b/app/javascript/src/styles/views/search_trends/_search_trends.scss
@@ -88,5 +88,7 @@ body.c-search-trends.a-index {
     padding: 0.5rem;
     background: themed("color-section");
     width: min-content;
+
+    input[type="text"] { width: unset !important }
   }
 }
